<resources>
    <string name="app_name">HQTECH Remview</string>
    <string name="msg_loading">Xin chờ...</string>

    <!--Network error-->
    <string name="newtwork_error">Không thể kết nối, vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="newtwork_error_button_retry">Thử lại</string>
    <string name="newtwork_error_button_exit">Thoát</string>
<!--    main activity-->
    <string name="format" translatable="false">%1$td.%1$tm.%1$tY %1$tH:%1$tM:%1$tS</string>
    <string name="date_format" translatable="false">%1$td.%1$tm.%1$tY</string>
    <string name="main_dialog_title">Xóa nhà hàng</string>
    <string name="main_dialog_message">Bạn có thực sự muốn xóa nhà hàng này?</string>
    <string name="main_dialog_confirm">Có</string>
    <string name="main_dialog_cancel">Không</string>
    <string name="scan_qr_code_message">Quét mã QR</string>
    <string name="scan_qr_code_cancelled">Đã hủy việc quét mã QR</string>
    <string name="restaurant_list">Danh sách nhà hàng</string>
    <string name="selling_list">Danh sách bán</string>
    <string name="connection_error">Lỗi kết nối, vui lòng thử lại</string>
    <string name="session_timeout">Phiên làm việc đã hết hạn vui lòng scan lại QR Code</string>
    <string name="bill_detail">Chi tiết</string>
    <string name="qr_code_wrong_format">Mã QR không hợp lệ</string>
    <string name="can_not_connect_to_server">Không thể kết nối tới server.</string>
    <string name="retry_connect">Thử lại</string>

    <string name="title_activity_main">activity_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sales_report">Báo cáo bán hàng</string>
    <string name="food_report">Báo cáo món ăn</string>
    <string name="statistic_report">Phân tích thống kê</string>
    <string name="scan_qr_success">Quét mã QR thành công</string>
    <string name="store">Cửa hàng</string>
    <string name="revenue">Doanh thu</string>
    <string name="news">Tin tức</string>
    <string name="settings">Điều khiển</string>
    <string name="money_format" translatable="false">%.2f €</string>
    <string name="cash">Tiền mặt</string>
    <string name="card">Tiền thẻ</string>
    <string name="liferando">Liferando</string>
    <string name="digibes">Digibes</string>
    <string name="sell_date_format">%1$td/%1$tm - %1$tR</string>
    <string name="sell_money_format">$%1$,.2f</string>
    <string name="food_log_time">%1$td/%1$tm - %1$tR</string>
    <string name="sell_revenue">Doanh thu bán hàng</string>
    <string name="revenue_uppercase">TỔNG TIỀN</string>
    <string name="sell_list">Danh sách bán</string>
    <string name="total">Tổng tiền</string>
    <string name="change_restaurant_name">Sửa tên nhà hàng</string>
    <string name="restaurant_name">Tên nhà hàng</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Huỷ</string>
    <string name="all_restaurant">Tất cả nhà hàng</string>
    <string name="incomedayofweek">Thu nhập theo tháng</string>
    <string name="incomehour">Thu nhập theo giờ</string>
    <string name="houseincome">Thu nhập theo trong/ ngoài nhà</string>
    <string name="logfood">Danh sách đặt</string>
    <string name="time">Thời gian</string>
    <string name="canceler">Người huỷ</string>
    <string name="orderer">Người đặt</string>
    <string name="table">Bàn</string>
    <string name="machineincome">Tiền theo máy in</string>
    <string name="memberincome">Thu nhập theo nhân viên</string>
    <string name="monthincome">Thu nhập theo ngày trong tháng</string>
    <string name="pleasewait">Vui lòng chờ...</string>
    <string name="quantityincome">Tiền theo số lượng mặt hàng</string>
    <string name="revenuecancel">Danh sách đặt</string>
    <string name="revenueitem">Doanh thu hiện tại</string>
    <string name="analytic">Phân tích thống kê</string>
    <string name="revenuesale">Danh sách bán</string>
    <string name="employee">Nhân viên</string>
    <string name="selltype">Kiểu bán</string>
    <string name="stt">STT</string>
    <string name="table_number">Bàn số</string>
    <string name="typeincome">Tiền theo nhóm hàng</string>
    <string name="weekincome">Thu nhập theo ngày trong tuần</string>
    <string name="lastaccess">Lần mở cuối:</string>
    <string name="vi">Tiếng việt</string>
    <string name="en">Tiếng Anh</string>
    <string name="ger">Tiếng Đức</string>
    <string name="restaurant_empty_name">Tên nhà hàng không được để trống</string>
    <string name="not_chose_restaurant">Bạn chưa chọn nhà hàng</string>
    <string name="print_bill">In hoá đơn theo ngày</string>
    <string name="employee_money">Thanh toán tiền nhân viên</string>
    <string name="active_restaurant">Vui lòng liên hệ nhà cung cấp để được kích hoạt</string>
    <string name="close">Đóng</string>
    <string name="check">Kiểm tra</string>
    <string name="open_tunnel">Bật Tunnel</string>
    <string name="open_teamview">Bật Teamviewer</string>
    <string name="quit_application">Bạn có thực sự muốn thoát ứng dụng</string>
    <string name="choose_day">Chọn ngày</string>
    <string name="verify_qr_code_error">Có lỗi xảy ra khi xác thực mã QR</string>
    <string name="qr_code_not_found_gallery">Không tìm thấy mã QR trong hình</string>
    <string name="gallery_open_error">Không thể mở hình</string>
    <string name="or_choose_from_gallery">Chọn từ bộ sưu tập</string>
    <string name="or">Hoặc</string>
    <string name="editpermission">Chỉnh sửa quyền sử dụng</string>
    <string name="edititem">Chỉnh sửa mặt hàng</string>
    <string name= "employeepayment">Thanh toán tiền với nhân viên"</string>
    <string name= "summaryofdaysandmonths">Tổng kết ngày và tháng"</string>
    <string name= "permission">Quyền sử dụng"</string>
    <string name="four">Người sử dụng có toàn quyển quản lý hệ thống</string>
    <string name="sixfour">Người sử dụng là lái xe</string>
    <string name="onetwoeight">Người sử dụng được phép chỉnh sửa mặt hàng</string>
    <string name="one">Người sử dụng được phép xem danh sách bán của mình</string>
    <string name="twofivesix">Người sử dụng được phép in báo cáo thu nhập của mình</string>
    <string name="fiveonetwo">Người sử dụng được chuyển món ăn giữa các bàn</string>
    <string name="onezerotwofour">Người sử dụng có quyền huỷ mặt hàng vừa bấm sai</string>
    <string name="two">Người sử dụng có quyền huỷ mặt hàng đã được đặt sai</string>
    <string name="twozerofoureight">Người sử dụng được phép đặt đồ ăn ở bàn khác</string>
    <string name="threetwo">Người sử dụng được quyền thay đổi mức giá hoặc giảm giá</string>
    <string name="fourzeroninesix">Người sử dụng được phép sửa lại cách trả tiền</string>
    <string name="eight">Người sử dụng có quyền kết thúc cuối ngày</string>
    <string name="onesix">Người sử dụng có quyền thoát hệ thống</string>
    <string name="updatepermissionmsg">Update permission success</string>
    <string name="name">Tên</string>
    <string name="password">Mật mã</string>
    <string name="nfc">Dữ liệu NFC</string>
    <string name="save">Save</string>
    <string name="eightoneninetwo">Người sử dụng có quyền thống kê mặt hàng</string>
    <string name="employee_name">Tên nhân viên</string>
    <string name="top20">Top 20 mặt hàng bán chạy nhất</string>
    <string name="print_bill_month">In hoá đơn theo tháng</string>
    <string name="pay_type" translatable="false">Cách trả tiền</string>
    <string name="employee_money_message">Thanh toán tiền nhân viên</string>
    <string name="employee_print_bill">In hoá đơn nhân viên</string>
    <string name="cancel">Huỷ</string>
</resources>