<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
       <variable
            name="parent"
            type="hq.remview.ui.main.store.StoreFragment" />
    </data>

    <RelativeLayout
        android:background="@drawable/round_corner"
        android:backgroundTint="#333333"
        android:padding="@dimen/_6sdp"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_restaurant"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_centerInParent="true"
            android:layout_below="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:textStyle="bold"
                android:id="@+id/restaurant_check_cancel"
                android:onClick="@{(v)->parent.onClick(v)}"
                android:padding="@dimen/_4sdp"
                android:gravity="center"
                android:backgroundTint="#E0544B"
                android:background="@drawable/round_corner"
                android:text="@string/close"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_30sdp"
                android:textSize="@dimen/_10ssp"/>
            <TextView
                android:layout_marginStart="@dimen/_8sdp"
                android:id="@+id/restaurant_check_confirm"
                android:onClick="@{(v)->parent.onClick(v)}"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:backgroundTint="#61B781"
                android:background="@drawable/round_corner"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/check"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_30sdp"
                android:textSize="@dimen/_10ssp"/>
        </LinearLayout>
    </RelativeLayout>
</layout>