<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="hq.remview.data.model.api.obj.BillingItemUnit" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@{`#`+item.billNumber}"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{item.paymentMethod}"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </RelativeLayout>

        <View
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#80EBEFF2" />

        <RelativeLayout
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                 />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{item.date}"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/employee"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                 />

            <TextView
                android:id="@+id/employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{item.employee}"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/table"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                 />

            <TextView
                android:id="@+id/table_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{item.tableName}"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/_6sdp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/selltype"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                 />

            <TextView
                android:id="@+id/table_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{item.inOrOut}"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:textStyle="bold"/>
        </RelativeLayout>
        <View
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layerType="software"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/dash_line" />

    </LinearLayout>
</layout>