<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="a"
            type="hq.remview.ui.main.setting.permission.edit.PermissionEditActivity" />

        <variable
            name="vm"
            type="hq.remview.ui.main.setting.permission.edit.PermissionEditViewModel" />

    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/save_btn"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="#333333">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@{a.myApplication().currentRestaurant.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".25" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@{@string/editpermission +  ` - ` + vm.name}"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar_title" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ibutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="@{vm.ibutton ? true : false}"
                    android:onClick="@{(v)->a.onClick(v)}"
                    android:padding="@dimen/_7sdp"
                    android:src="@drawable/ibutton"
                    android:tint="@{vm.ibutton ? @color/white : @color/gray}"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/form_background"
                android:backgroundTint="#333333"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@={vm.name}"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/form_background"
                android:backgroundTint="#333333"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@={vm.password}"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/nfc"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/nfc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/form_background"
                android:backgroundTint="#333333"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@={vm.nfc}"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/permission"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                tools:listitem="@layout/layout_sell_detail_item" />

        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_9sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_8sdp"
            android:backgroundTint="#333333"
            android:onClick="@{(v)->a.onClick(v)}"
            android:text="@string/save"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />
    </RelativeLayout>
</layout>