<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="hq.remview.data.model.api.obj.LogFoodItem" />
    </data>
        <com.google.android.material.card.MaterialCardView
            android:layout_marginTop="@dimen/_4sdp"
            app:cardBackgroundColor="#333333"
            app:cardCornerRadius="@dimen/_8sdp"
            android:layout_width="match_parent"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingVertical="@dimen/_9sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                    app:layout_constraintHorizontal_bias="0.5"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="#9EFFFFFF"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:text="@{@string/food_log_time(item.parseDate)}"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/canceler"
                        android:textColor="#9EFFFFFF"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.forEmployee}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orderer"
                        android:textColor="#9EFFFFFF"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:text="@{item.employee}"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout3"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/table"
                        android:textColor="#9EFFFFFF"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:text="@{item.tableName}"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />
                </LinearLayout>
                <View
                    android:id="@+id/line"
                    android:layout_marginTop="@dimen/_9sdp"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:backgroundTint="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@drawable/dash_line" />
                <RelativeLayout
                    android:layout_marginTop="@dimen/_7sdp"
                    app:layout_constraintEnd_toEndOf="@id/linearLayout4"
                    app:layout_constraintStart_toStartOf="@id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/order_name"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="@dimen/_160sdp"
                        android:ellipsize="end"
                        android:text="@{item.foodName}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/price"
                        android:layout_toEndOf="@id/order_name"
                        android:text="@{`x`+(int)item.quantity}"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="80"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11ssp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
</layout>
